<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yifuyou.test_main.MainActivity"
    app:title="UI test"
    android:id="@+id/container"
    android:background="#11223244">
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constrainedWidth="true"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintWidth_percent="1"
            android:background="#88AAFFAA"
            android:gravity="center"
            android:text="@string/main_tv_info_string_1"
            android:textStyle="bold"
            android:textSize="30sp"
            android:id="@+id/tv_info"
            />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_info"
        app:layout_constraintBottom_toTopOf="@id/main_btn_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_1"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        android:id="@+id/main_btn_1"
        android:text="@string/main_btn_string_1"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/main_btn_1"
        app:layout_constraintBottom_toBottomOf="@id/main_btn_1"
        app:layout_constraintStart_toEndOf="@id/main_btn_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.5"
        android:textSize="20sp"
        android:id="@+id/tv_1"
        android:text="@string/main_tv_string_1"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_1"
        app:layout_constraintBottom_toTopOf="@id/main_btn_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_1"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:id="@+id/main_btn_2"
        android:text="@string/main_btn_string_2"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/main_btn_2"
        app:layout_constraintBottom_toBottomOf="@id/main_btn_2"
        app:layout_constraintStart_toEndOf="@id/main_btn_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.5"
        android:text="@string/main_tv_string_2"
        android:textSize="20sp"
        android:id="@+id/tv_2"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_1"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:id="@+id/main_btn_3"
        android:text="@string/main_btn_string_3"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/main_btn_3"
        app:layout_constraintBottom_toBottomOf="@id/main_btn_3"
        app:layout_constraintStart_toEndOf="@id/main_btn_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.5"
        android:text="@string/main_tv_string_3"
        android:textSize="20sp"
        android:id="@+id/tv_3"/>





</androidx.constraintlayout.widget.ConstraintLayout>